# Haiker

./: .dockerignore  .env.example  .gitignore  .redocly.yaml  Cargo.toml  Dockerfile  Justfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  haiker-complete-plan.md  ralph.yaml  shell.nix
.github/workflows/: ci.yml  dispatch-kiro.yml  on-issue-close.yml  perf-test.yml
.kiro/steering/: api-design.md  architecture.md  coding-conventions.md  development-workflow.md  domain-model.md  project-overview.md  technology-stack.md  test-driven-development.md
.sqlx/: .gitkeep
crates/api/: Cargo.toml
crates/api/src/: activities.rs  activities_dto.rs  auth.rs  auth_handlers.rs  error.rs  exports.rs  exports_dto.rs  health.rs  imports.rs  imports_dto.rs  legs.rs  legs_dto.rs  main.rs  recorded_route.rs  recorded_route_dto.rs  route_editing.rs  route_editing_dto.rs  route_editing_tests.rs  route_versioning.rs  route_versioning_dto.rs
crates/app/: Cargo.toml
crates/app/src/: activity_catalog.rs  error.rs  exports.rs  identity.rs  imports.rs  lib.rs  polar_integration.rs  recorded_activity.rs  route_editing.rs  route_versioning.rs
crates/app/src/activity_catalog/: commands.rs  mod.rs  queries.rs  repository.rs
crates/app/src/exports/: commands.rs  gpx_generator.rs  job_types.rs  mod.rs  repository.rs  state_machine.rs
crates/app/src/identity/: mod.rs
crates/app/src/imports/: checksum.rs  cleanup.rs  commands.rs  commit.rs  duplicate_detection.rs  failure_code.rs  gpx_parser.rs  job_types.rs  mod.rs  orchestrator.rs  repository.rs  state_machine.rs
crates/app/src/recorded_activity/: leg_commands.rs  leg_queries.rs  leg_repository.rs  legs.rs  mod.rs  normalization.rs  queries.rs  repository.rs
crates/app/src/route_editing/: draft.rs  gateway.rs  mod.rs  operations.rs  property_tests.rs  repository.rs  tests.rs  validation.rs  value_objects.rs
crates/app/src/route_versioning/: commit.rs  comparison_query.rs  corrected_statistics.rs  gateway.rs  mod.rs  publish_command.rs  queries.rs  repository.rs
crates/app/tests/: gpx_export_authorization.rs  gpx_export_proptest.rs  gpx_export_round_trip.rs  gpx_parser_integration.rs  gpx_parser_proptest.rs
crates/infrastructure/: Cargo.toml
crates/platform/: Cargo.toml
crates/platform/src/: activity_persistence.rs  auth_middleware.rs  clock.rs  config.rs  database.rs  export_worker.rs  import_cleanup.rs  import_commit.rs  import_persistence.rs  import_worker.rs  job_queue.rs  leg_persistence.rs  lib.rs  metrics.rs  object_storage.rs  oidc.rs  oidc_state_store.rs  outbox.rs  ownership.rs  publication_commit.rs  rate_limit.rs  recorded_route_persistence.rs  request_id.rs  route_editing_gateways.rs  route_editing_persistence.rs  route_version_persistence.rs  telemetry.rs  upload_quota.rs  user_persistence.rs  worker_runtime.rs
crates/test_support/: Cargo.toml
crates/test_support/fixtures/: excessive_depth.gpx  expected_export_simple.gpx  invalid_coordinates.gpx  large_route.gpx  malformed_xml.gpx  valid_gpx10.gpx  valid_multi_segment.gpx  valid_no_elevation.gpx  valid_no_timestamps.gpx  valid_non_ascii.gpx  valid_simple.gpx  xxe_attack.gpx
crates/test_support/src/: builders.rs  fixtures.rs  lib.rs
crates/test_support/tests/: integration_tests.rs  parser_property_tests.rs
crates/worker/: Cargo.toml
crates/worker/src/: main.rs
deploy/: docker-compose.staging.yml  env.example
deploy/backup/: docker-compose.backup.yml  env.backup.example
docs/: kiro-issue-automation.md  release-checklist.md
docs/adr/: 001-backup-strategy.md  002-identity-provider-selection.md
docs/performance/: README.md  browser-journey-checklist.md  browser-matrix.md  capacity-assumptions.md  results-template.md  targets.md
docs/runbooks/: backup-operations.md  backup-quickref.md  data-recovery.md  dependency-outage.md  incident-response.md  migration-recovery.md  restore-drill.md  rollback.md  secret-rotation.md
docs/security/: authorization-matrix.md  privacy-scan.md  threat-model.md
docs/specs/: multi-leg-hikes.md
docs/templates/: drill-report-template.md
frontend/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  stryker.config.json  vite.config.ts
frontend/docs/: accessibility-audit.md
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
issues/: mvp.yaml
log/: haiker.2026-07-19
migrations/: 20250101000000_create_schemas.sql  20250101000001_create_platform_outbox.sql  20250101000002_create_job_queue.sql  20250101000003_create_identity_users.sql  20250101000004_create_identity_sessions.sql  20250101000005_create_platform_audit_log.sql  20250101000006_enhance_job_queue.sql  20250102000001_create_imports_tables.sql  20250102000002_create_recorded_activity_tables.sql  20250102000003_create_activity_catalog_tables.sql  20250103000001_add_activity_lifecycle_state.sql  20250104000001_create_route_editing_tables.sql  20250105000001_add_payload_hash_to_imports.sql  20250106000001_add_job_idempotency.sql  20250107000001_create_route_versioning_tables.sql  20250107000002_add_recorded_activity_immutability.sql  20250108000001_add_corrected_summary_to_activities.sql  20250108000002_add_outbox_correlation_id.sql  20250109000001_create_legs_table.sql
mutants.out/: lock.json  mutants.json
openapi/: openapi.yaml
openapi/components/: activities.yaml  common.yaml  errors.yaml  exports.yaml  imports.yaml  route-editing.yaml  route-versions.yaml  security.yaml
openapi/paths/: activities.yaml  auth.yaml  exports.yaml  health.yaml  imports.yaml  route-editing.yaml  route-versions.yaml
scripts/: backup-minio.sh  backup-monitor.sh  backup-postgres.sh  backup-retention.sh  bundle-openapi.sh  create-github-issues.sh  dispatch-kiro-issue.sh  init-db.sql  integrity-check.sh  label-unblocked-issues.sh  migration-recovery.sh  restore-drill.sh  restore-postgres.sh  run-migrations.sh  smoke-test.sh  sync-github-issues.sh  verify-backup.sh  verify-minio-backup.sh
scripts/tests/: test-alert-rules.sh  test-e2e-structure.sh  test-issue-automation.sh
tests/: e2e-production.sh
tests/performance/: Makefile  README.md  (+1 more)
(+137 files in other folders)
