[workspace]
resolver = "2"
members = [
    "crates/app",
    "crates/api",
    "crates/worker",
    "crates/platform",
    "crates/test_support",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging & telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Configuration
dotenvy = "0.15"

# Internal crates
haiker-app = { path = "crates/app" }
haiker-platform = { path = "crates/platform" }
haiker-test-support = { path = "crates/test_support" }
