[workspace]
resolver = "2"
members = [
    "crates/app",
    "crates/api",
    "crates/worker",
    "crates/platform",
    "crates/test_support",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# Common types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging & telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Configuration
dotenvy = "0.15"

# Object storage (S3-compatible via rust-s3, works with Rust 1.92)
rust-s3 = { version = "0.37", default-features = false, features = ["tokio-rustls-tls"] }

# XML parsing
quick-xml = "0.37"

# Cryptography & randomness
sha2 = "0.10"
rand = { version = "0.8", features = ["std"] }
hex = "0.4"

# HTTP extras
axum-extra = { version = "0.10", features = ["cookie"] }

# Concurrency utilities
tokio-util = { version = "0.7", features = ["rt"] }

# Internal crates
haiker-app = { path = "crates/app" }
haiker-platform = { path = "crates/platform" }
haiker-test-support = { path = "crates/test_support" }