[package]
name = "haiker-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Haiker HTTP API server (Axum)"

[dependencies]
haiker-app.workspace = true
haiker-platform.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
