[package]
name = "haiker-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Haiker HTTP API server (Axum)"

[dependencies]
haiker-app.workspace = true
haiker-platform.workspace = true
axum.workspace = true
axum-extra.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true
chrono.workspace = true
dotenvy.workspace = true
async-trait.workspace = true

[dev-dependencies]
haiker-test-support.workspace = true
sqlx.workspace = true