[package]
name = "haiker-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Haiker domain modules - pure business logic"

[dependencies]
thiserror.workspace = true
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
