[package]
name = "haiker-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Haiker domain modules - pure business logic"

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
