[package]
name = "haiker-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Haiker domain modules - pure business logic"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
quick-xml.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
