[package]
name = "haiker-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Haiker shared infrastructure - configuration, telemetry, database setup"

[dependencies]
anyhow.workspace = true
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
chrono.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["migrate"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url = "2"
uuid.workspace = true
aws-sdk-s3.workspace = true
aws-config.workspace = true
async-trait.workspace = true
