[package]
name = "haiker-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Haiker shared infrastructure - configuration, telemetry, database setup"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
# aws-sdk-s3.workspace = true  # Requires Rust 1.94+
# aws-config.workspace = true  # Requires Rust 1.94+
chrono.workspace = true
dotenvy.workspace = true
http = "1"
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["migrate"] }
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url = "2"
uuid.workspace = true