[package]
name = "haiker-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Haiker shared infrastructure - configuration, telemetry, database setup"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-extra.workspace = true
rust-s3 = { workspace = true }
chrono.workspace = true
dotenvy.workspace = true
haiker-app.workspace = true
hex.workspace = true
http = "1"
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx = { workspace = true, features = ["migrate"] }
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url = "2"
uuid.workspace = true