[package]
name = "haiker-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Haiker background job processor"

[dependencies]
haiker-app.workspace = true
haiker-platform.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dotenvy.workspace = true

[dev-dependencies]
haiker-test-support.workspace = true
